# CRC32C-MPI-Collision-Finder

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/crc32c/: crc32c.hpp
src/crc32c/: CMakeLists.txt  crc32c.cpp  crc32c_golden_amd.cpp  crc32c_golden_amd.hpp  crc32c_golden_intel.cpp  crc32c_golden_intel.hpp  crc32c_golden_sw.cpp  crc32c_golden_sw.hpp
tests/: CMakeLists.txt  test_crc32c.cpp
